src/objects/Bill_Method__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Bill_Calculator__c</fullName>
        <label>Bill Calculator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Presenter__c</fullName>
        <label>Bill Presenter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Arrangement_Code__c</fullName>
        <description>This field is created for iAve conversion</description>
        <label>Payment Arrangement Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Bill Method</label>
</CustomObject>